Before CMF 1.6 beta

  Bug Fixes

    - Removed BBBTransaction class from CMFCore.utils

  Features

    - Replaced Z2 interfaces w/ Z3 interfaces, dynamically creating Z2
      interfaces via bridge

    - Back-ported the GenericSetup style of site creation from CMF trunk