@@ -105,10 +105,7 @@ def addFile( self
     self._getOb(id).manage_upload(file)
 
 
-class File( OFS.Image.File
-          , PortalContent
-          , DefaultDublinCoreImpl
-          ):
+class File(PortalContent, OFS.Image.File, DefaultDublinCoreImpl):
     """
         A Portal-managed File
     """
@@ -154,6 +151,8 @@ class File( OFS.Image.File
                 ):
         OFS.Image.File.__init__( self, id, title, file
                                , content_type, precondition )
+        self._setId(id)
+        delattr(self, '__name__')
 
         # If no file format has been passed in, rely on what OFS.Image.File
         # detected. Unlike Images, which have code to try and pick the content
@@ -165,6 +164,12 @@ class File( OFS.Image.File
         DefaultDublinCoreImpl.__init__( self, title, subject, description
                                , contributors, effective_date, expiration_date
                                , format, language, rights )
+
+    # For old instances where bases had OFS.Image.File first,
+    # the id was actually stored in __name__.
+    # getId() will do the correct thing here, as id() is callable
+    def id(self):
+        return self.__name__
 
     security.declareProtected(View, 'SearchableText')
     def SearchableText(self):
